--- a/barber/src/components/image/image.css
+++ b/barber/src/components/image/image.css
@@ -1,5 +1,20 @@
+/*texto sobre imagem, div imagem relative, e div texto absolute*/
 .img {
     width: 97vw;
     height: 125vh;
     filter: opacity(82%);
+    position: relative;
 }
+
+.title{
+    position: absolute;
+    top: 32%;
+    left: 50%;
+}
+
+header p{
+    font-size: 95px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
