--- a/barber/src/styles/index.css
+++ b/barber/src/styles/index.css
@@ -6,7 +6,8 @@
 }
 
 body {
-  background-color: #ecf1f8;
+  /*background-color: #ecf1f8;*/
+  background-color: #fff;
   color: #fff;
   font-family: 'roboto', sans-serif;
   -webkit-font-smoothing: antialiased !important;
@@ -14,7 +15,7 @@ body {
 
 .page-home{
   width: 97vw;
-  height: 97vh;
+  height: 100%;
   margin: 10px auto;
   background-color: #3e6f55;
   border: 0;
