--- a/barber/src/styles/index.css
+++ b/barber/src/styles/index.css
@@ -8,7 +8,7 @@
 body {
   /*background-color: #ecf1f8;*/
   background-color: #fff;
-  color: #fff;
+  color: #fafafa;
   font-family: 'roboto', sans-serif;
   -webkit-font-smoothing: antialiased !important;
 }
