--- a/barber/src/index.css
+++ b/barber/src/index.css
@@ -19,6 +19,7 @@ body {
   margin: 10px auto;
   background-color: #3e6f55;
   border: 0;
+  padding-bottom: 50px;
 }
 
 /* #fafafa cor do formulário */
